# QRScanner

app/: build.gradle
app/src/androidTest/java/com/ndk/qrcodedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  QRScanner.cpp  QRScanner.h  native-lib.cpp
app/src/main/java/com/ndk/qrcodedemo/: MainActivity.java  ScannerActivity.java
app/src/main/jniLibs/include/: zbar.h
app/src/main/jniLibs/include/opencv/: cv.h  cvaux.h  cvwimage.h  cxcore.h  cxmisc.h  highgui.h  ml.h
app/src/main/jniLibs/include/opencv2/: cvconfig.h
app/src/main/jniLibs/include/opencv2/calib3d/: calib3d_c.h
app/src/main/jniLibs/include/opencv2/core/: core_c.h  cv_cpu_dispatch.h  cv_cpu_helper.h  cvdef.h  types_c.h
app/src/main/jniLibs/include/opencv2/flann/: all_indices.h  allocator.h  any.h  autotuned_index.h  composite_index.h  config.h  defines.h  dist.h  dummy.h  dynamic_bitset.h  general.h  ground_truth.h  hdf5.h  heap.h  hierarchical_clustering_index.h  index_testing.h  kdtree_index.h  kdtree_single_index.h  kmeans_index.h  linear_index.h  logger.h  lsh_index.h  lsh_table.h  matrix.h  nn_index.h  object_factory.h  params.h  random.h  result_set.h  sampling.h  saving.h  simplex_downhill.h  timer.h
app/src/main/jniLibs/include/zbar/: Decoder.h  Exception.h  Image.h  ImageScanner.h  Processor.h  QZBar.h  QZBarImage.h  Scanner.h  Symbol.h  Video.h  Window.h  zbargtk.h
app/src/main/res/layout/: activity_main.xml  activity_test.xml
gradle/wrapper/: gradle-wrapper.properties
(+18 files in other folders)
